# AoC2017

./: CMakeLists.txt  README.md
cmake/: googletest-build.cmake
day01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp  testday01.cpp
day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  testday02.cpp
day03/: CMakeLists.txt  day03.cpp  day03.h  main.cpp  testday03.cpp
day04/: CMakeLists.txt  day04.cpp  day04.h  main.cpp  testday04.cpp
day05/: CMakeLists.txt  day05.cpp  day05.h  main.cpp  testday05.cpp
day06/: CMakeLists.txt  day06.cpp  day06.h  main.cpp  testday06.cpp
day07/: CMakeLists.txt  day07.cpp  day07.h  main.cpp  testday07.cpp
day08/: CMakeLists.txt  day08.cpp  day08.h  main.cpp  testday08.cpp
day09/: CMakeLists.txt  day09.cpp  day09.h  main.cpp  testday09.cpp
day10/: CMakeLists.txt  day10.cpp  day10.h  main.cpp  testday10.cpp
day11/: CMakeLists.txt  day11.cpp  day11.h  main.cpp  testday11.cpp
day12/: CMakeLists.txt  day12.cpp  day12.h  main.cpp  testday12.cpp
day13/: CMakeLists.txt  day13.cpp  day13.h  main.cpp  testday13.cpp
day14/: CMakeLists.txt  day14.cpp  day14.h  main.cpp  testday14.cpp
day15/: CMakeLists.txt  day15.cpp  day15.h  main.cpp  testday15.cpp
day16/: CMakeLists.txt  day16.cpp  day16.h  main.cpp  testday16.cpp
day17/: CMakeLists.txt  day17.cpp  day17.h  main.cpp  testday17.cpp
day18/: CMakeLists.txt  day18.cpp  day18.h  main.cpp  testday18.cpp
day19/: CMakeLists.txt  day19.cpp  day19.h  main.cpp  testday19.cpp
day20/: CMakeLists.txt  day20.cpp  day20.h  main.cpp  testday20.cpp
day21/: CMakeLists.txt  day21.cpp  day21.h  main.cpp  testday21.cpp
day22/: CMakeLists.txt  day22.cpp  day22.h  main.cpp  testday22.cpp
day23/: CMakeLists.txt  day23.cpp  day23.h  main.cpp
day24/: CMakeLists.txt  day24.cpp  day24.h  main.cpp  testday24.cpp
day25/: CMakeLists.txt  day25.cpp  day25.h  main.cpp  testday25.cpp
skel/: CMakeLists.txt.in  copyskel.sh  day$DAYNAME.cpp.in  day$DAYNAME.h.in  main.cpp.in  testday$DAYNAME.cpp.in
utils/: aocutils.cpp  aocutils.h
